--- a/index.html
+++ b/index.html
@@ -18,18 +18,23 @@
         <span class="loader"></span>
         <h1 style="color: var(--text-color)">Please wait...</h1>
       </div>
+
       <div class="bg"></div>
+
       <main>
         <h1 id="fact">Random cat facts 🐱</h1>
+
         <div class="i-lo">
           <p class="instruction">
             Click the button to get random facts about cats
           </p>
           <span class="loader"></span>
         </div>
+
         <button class="btn-primary" id="getFacts">
           Give me random facts 🐱
         </button>
+
         <p class="credit">
           API used :
           <span><a href="https://cataas.com/" target="_blank">cataas</a></span>
@@ -39,6 +44,13 @@
               href="https://github.com/wh-iterabb-it/meowfacts?tab=readme-ov-file"
               target="_blank"
               >meowfacts</a
+            ></span
+          ><br /><br />
+          <span
+            ><a
+              href="https://github.com/itsJustFarid/Random-Cat-Facts/"
+              target="_blank"
+              >Repository</a
             ></span
           >
         </p>
